--- a/Probability New/Probability.tex
+++ b/Probability New/Probability.tex
@@ -772,28 +772,28 @@ $P$ measure is specified by the natural condition of experiment (if the coin is 
 \chapter{Continuous Random Variable}
 \section{Basic Knowledge}
 \begin{definition}
-\label{2.0.1}
+\label{2.1.1}
 \textbf{(Definition of Continuous Random Variable)} A continuous random variable $X:(\Omega,\mathcal{F},P)\rightarrow (\R,\mathcal{B}(\R))$ is a random variable such that 
 \begin{equation}
 X[\Omega]\text{ is uncountable }
 \end{equation}
 \end{definition}
 \begin{definition}
-\label{2.0.2}
+\label{2.1.2}
 \textbf{(Definition of Cumulative Distribution Function)} The cumulative distribution function $F_X$ is 
  \begin{equation}
 F_X(x)=P(X\leq x)
 \end{equation}
 \end{definition}
 \begin{definition}
-\label{2.0.3}
+\label{2.1.3}
 \textbf{(Definition of Absolutely Continuous Random Variable)} By an absolutely continuous random variable, we mean a continuous random variable $X:(\Omega,\mathcal{F},P)\rightarrow (\R,\mathcal{B}(\R))$ such that
 \begin{equation}
 F_X\text{ is differentiable everywhere }
 \end{equation}
 \end{definition}
 \begin{definition}
-\label{2.0.4}
+\label{2.1.4}
 \textbf{(Definition of Probability Density Function)} Let $X$ be an absolutely continuous random variable. The probability density function $f_X$ for $X$ is defined to be
 \begin{equation}
 f_X(x)=F'_X(x)
@@ -806,7 +806,7 @@ P(X\in B)=\int_B f_X(s)ds
 \end{equation}
 \end{minipage}}
 \begin{theorem}
-\label{2.0.5}
+\label{2.1.5}
 \textbf{(Fundamental Theorem of Calculus)} We have
 \begin{equation}
 P(a\leq X\leq b)=\int_a^b f_X(s)ds
@@ -822,7 +822,7 @@ P(a\leq X\leq b)=\int_a^b f_X(s)ds
 \end{align}
 \end{proof}
 \begin{corollary}
-\label{2.0.6}
+\label{2.1.6}
 \textbf{(Fundamental Theorem of Calculus)} We have
 \begin{equation}
 P(a\leq X)=\int_a^\infty f_X(s)ds
@@ -838,7 +838,7 @@ P(a\leq X)&=\lim_{n\to\infty}\sum_{k=0}^n P(a+k\leq X<a+k+1)?\\
 \end{align}
 \end{proof}
 \begin{corollary}
-\label{2.0.7}
+\label{2.1.7}
 \textbf{(Fundamental Theorem of Calculus)} We have
 \begin{equation}
 P(X\leq a)=\int_{-\infty}^a f_X(s)ds
@@ -857,21 +857,21 @@ Because measure is countable additive, we have
 The definition of expected value and variance of continuous random variable present.
 \end{minipage}}
 \begin{definition}
-\label{2.0.8}
+\label{2.1.8}
 \textbf{(Definition of Expected Value)} Let $X$ be an absolutely continuous random variable. We define
  \begin{equation}
 E[X]:=\int_{-\infty}^\infty s\times f_X(s)ds
 \end{equation}
 \end{definition}
 \begin{definition}
-\label{2.0.9}
+\label{2.1.9}
 \textbf{(Definition of Variance)} Let $X$ be an absolutely continuous random variable. We define
 \begin{equation}
 \var [X]=\int^\infty_{-\infty} (s-E[X])^2\times f_X(s)ds
 \end{equation}
 \end{definition}
 \begin{theorem}
-\label{2.0.10}
+\label{2.1.10}
 \textbf{(Formula for Variance)}
 \begin{equation}
 \var [X]=E[X^2]-E^2[X]
@@ -886,10 +886,10 @@ E[X]:=\int_{-\infty}^\infty s\times f_X(s)ds
 \end{align}
 \end{proof}
 \fbox{\begin{minipage}{39em}
-The below show case when a variable $Y$ depend on a random variable $X$ (thus $Y$ is a random variable): what is the correct way to compute $f_Y$ from $f_X$. Notice that \myref{Theorem}{2.0.11} is inspired by \myref{Theorem}{2.0.12}
+The below show case when a variable $Y$ depend on a random variable $X$ (thus $Y$ is a random variable): what is the correct way to compute $f_Y$ from $f_X$. Notice that \myref{Theorem}{2.1.11} is inspired by \myref{Theorem}{2.1.12}
 \end{minipage}}
 \begin{theorem}
-\label{2.0.11}
+\label{2.1.11}
 \textbf{(Example)} Define
 \begin{equation}
 f_X(x):=\begin{cases}
@@ -929,7 +929,7 @@ g^{-1}(f_X(g^{-1}(y)))&= g^{-1}(f_X((1-y)^{\frac{1}{4}}))\\
 
 \end{proof}
 \begin{theorem}
-\label{2.0.12}
+\label{2.1.12}
 \textbf{(Example)} Define 
 \begin{equation}
 f_X(x):=\begin{cases}
@@ -961,7 +961,7 @@ g^{-1}(f_X(g^{-1}(y)))=g^{-1}f_X(\frac{y}{3}))=g^{-1}(1)=\frac{1}{3}
 \end{proof}
 \section{Law of Unconscious Statistician}
 \begin{theorem}
-\label{2.1.1}
+\label{2.2.1}
 \textbf{(Law of Unconscious Statistician)} Let $Y=g(X)$. If $X$ is discrete, we have
 \begin{equation}
 E[Y]=\sum_{x\in X[\Omega]} g(x)p_X(x)
@@ -1004,7 +1004,7 @@ We now have
 We now go into each continuous random variable. Start with the easiest, uniform random variable.
 \end{minipage}}
 \begin{definition}
-\label{2.2.1}
+\label{2.3.1}
 \textbf{(Definition of Uniform Random Variable)} We say an absolutely continuous random variable $X\sim \text{Uni}(\alpha ,\beta )$ is uniform if there exists $\alpha <\beta \inr$ such that
 \begin{equation}
 f_X(x)=\begin{cases}
@@ -1014,7 +1014,7 @@ f_X(x)=\begin{cases}
 \end{equation}
 \end{definition}
 \begin{theorem}
-\label{2.2.2}
+\label{2.3.2}
 \textbf{(Expected Value and Variance of Uniform Random Variable)} Let $X\sim \text{Uni}(\alpha ,\beta )$. We have
 \begin{equation}
 E[X]=\frac{\alpha +\beta }{2}\text{ and }\var [X]=\frac{(\beta -\alpha )^2}{12}
@@ -1052,7 +1052,7 @@ Then
 Second, exponential.
 \end{minipage}}
 \begin{definition}
-\label{2.2.3}
+\label{2.3.3}
 \textbf{(Definition of Exponential Random Variable)} We say an absolute continuous random variable $X\sim \text{Exp}(\ld )$ is exponential if there exists $\ld\inr^+$ such that
 \begin{equation}
 f_X(x)=\begin{cases}
@@ -1062,7 +1062,7 @@ f_X(x)=\begin{cases}
 \end{equation}
 \end{definition}
 \begin{theorem}
-\label{2.2.4}
+\label{2.3.4}
 \textbf{(Expected Value and Variance of Exponential Random Variable)} Let $X\sim \text{Exp}(\ld )$. We have 
 \end{theorem}
 \begin{proof}
@@ -1098,7 +1098,7 @@ Then we have
 \end{equation}
 \end{proof}
 \begin{theorem}
-\label{2.2.5}
+\label{2.3.5}
 \textbf{(Property of Exponential Random Variable)} Let $X\sim \text{Exp}(\ld )$. We see 
 \begin{equation}
 P(X\geq a )=e^{-a\ld }
@@ -1112,7 +1112,7 @@ P(X\geq a)&=\int_a^\infty \ld e^{-\ld x}dx\\
 \end{align}
 \end{proof}
 \begin{theorem}
-\label{2.2.6}
+\label{2.3.6}
 \textbf{(Memory-less Property of Exponential Random Variable)}  Let $X\sim \text{Exp}(\ld )$. We see
 \begin{equation}
 P(X\geq  a+b \at  X\geq  b)=\frac{e^{-(a+b)\ld }}{e^{-b\ld }}=e^{-a\ld }
@@ -1124,6 +1124,7 @@ If $X\sim \text{Exp}(\ld )$, it means the measurement of waiting time of an occu
 Before we start to talk about normal distribution. We first have to talk about Gauss Integral.
 \end{minipage}}
 \begin{theorem}
+\label{2.3.7}
 \textbf{(Gauss Integral)}
 \begin{equation}
 \int_{-\infty}^\infty e^{-x^2}dx=\sqrt{\pi} 
@@ -1144,6 +1145,7 @@ I^2=\pi \implies I=\sqrt{\pi}
 \end{equation}
 \end{proof}
 \begin{theorem}
+\label{2.3.8}
 \textbf{(Gauss Integral)} 
 \begin{equation}
 \int_{-\infty}^\infty e^{\frac{-(x-a)^2}{b}}dx=\sqrt{b\pi} 
@@ -1161,6 +1163,7 @@ Then we have
 \end{align}
 \end{proof}
 \begin{theorem}
+\label{2.3.9}
 \textbf{(Gamma Function)} For $z\inr$, let 
 \begin{equation}
 \Gamma (z)=\int_0^\infty t^z e^{-t}dt
@@ -1170,12 +1173,14 @@ Then we have
 Now we start to discuss normal distribution. 
 \end{minipage}}
 \begin{definition}
+\label{2.3.10}
 \textbf{(Definition of Normal Distribution)} A normal random variable $X\sim N(\mu,\sigma^2)$ is defined by
 \begin{equation}
 f_X(x)=\frac{1}{\sigma \sqrt{2\pi} }e^{\frac{-(x-\mu)^2}{2\sigma^2}}
 \end{equation}
 \end{definition}
 \begin{theorem}
+\label{2.3.11}
 \textbf{(Expected Value and Variance of Normal Random Variable)} Let $X\sim N(\mu,\sigma^2)$. We have
 \begin{equation}
 E[X]=\mu \text{ and }\var [X]=\sigma^2
@@ -1217,6 +1222,288 @@ Then we have
 \var [X]=E[X^2]-E^[X]=\sigma^2+\mu^2-\mu^2=\sigma^2
 \end{equation}
 \end{proof}
+\fbox{\begin{minipage}{39em}
+Now, we introduce how to do linear change of variable for normal distribution.
+\end{minipage}}
+\begin{theorem}
+\label{2.3.12}
+\textbf{(Linear Change of Normal Random Variable)} Let 
+\begin{equation}
+X\sim N(\mu,\sigma^2)\text{ and }Y=\alpha X+\beta \text{ where  }\alpha >0
+\end{equation}
+We have
+\begin{equation}
+Y\sim N(\alpha \mu+\beta , (\alpha \sigma)^2)
+\end{equation}
+\end{theorem}
+\begin{proof}
+Observe
+\begin{align}
+F_Y(y)&=P(Y\leq y)\\
+&=P(\alpha X+\beta \leq y)\\
+&=P(X\leq \frac{y-\beta }{\alpha })\\
+&=\int_{-\infty}^{\frac{y-\beta }{\alpha }} \frac{1}{\sigma \sqrt{2\pi} }e^{\frac{-(t-\mu)^2}{2\sigma^2}}dt
+\end{align}
+This give us
+\begin{align}
+f_Y(y)&=\frac{d}{dy}F_Y(y)\\
+&=\frac{d \frac{y-\beta }{\alpha }}{dy}\frac{d}{d\frac{y-\beta }{\alpha }}\int_{-\infty}^{\frac{y-\beta }{\alpha }}\frac{1}{\sigma \sqrt{2\pi} }e^{\frac{-(t-\mu)^2}{2\sigma^2}}dt\\
+&=\frac{1}{\alpha }\times \frac{1}{\sigma \sqrt{2\pi} }e^{\frac{-(\frac{y-\beta }{\alpha }-\mu)^2}{2\sigma^2}}\\
+&=\frac{1}{\alpha \sigma \sqrt{2\pi} }e^{\frac{-(y-\beta -\alpha \mu)^2}{2\alpha ^2\sigma^2}}
+\end{align}
+This give us
+\begin{equation}
+Y\sim N(\alpha \mu+\beta , (\alpha \sigma)^2)
+\end{equation}
+\end{proof}
+\begin{corollary}
+\label{2.3.13}
+\begin{equation}
+X\sim N(\mu,\sigma^2)\text{ and }Z=\frac{X-\mu}{\sigma}\implies Z\sim N(0,1)
+\end{equation}
+\end{corollary}
+\begin{definition}
+\label{2.3.14}
+\textbf{(Definition of Standard Normal Random Variable)} Let $Z\sim N(0,1)$. We denote
+\begin{equation}
+\Phi(z):=F_Z(z)
+\end{equation}
+Thus
+\begin{equation}
+\Phi(z)=F_Z(z)=\int_{-\infty}^z \frac{1}{1\sqrt{2\pi} }e^{\frac{-(s-0)^2}{2 1^2}}= \frac{1}{\sqrt{2\pi} }\int_{-\infty}^z e^{\frac{-s^2}{2}}ds
+\end{equation}
+\end{definition}
+\begin{theorem}
+\label{2.3.15}
+\textbf{(Probability of Normal Variable within Confidence Level)} Let $X\sim N(\mu, \sigma^2)$. We have
+\begin{gather}
+P(X\in [\mu-\sigma,\mu+\sigma])=0.3173\\
+P(X\in [\mu-2\sigma, \mu+2\sigma])=0.0455\\
+P(X\in [\mu-3\sigma,\mu+3\sigma])=0.0027
+\end{gather}
+\end{theorem}
+\begin{proof}
+Let $Z=\frac{X-\mu}{\sigma}$. We have $Z\sim N(0,1)$. This give us
+\begin{gather}
+P(X\in [\mu-\sigma,\mu+\sigma])=P(Z\in [-1,1])=0.3173\\
+P(X\in [\mu-2\sigma,\mu+2\sigma])=P(Z\in [-2,2])=0.0455\\
+P(X\in [\mu-\sigma,\mu+\sigma])=P(Z\in [-3,3])=0.0027
+\end{gather}
+\end{proof}
+\begin{theorem}
+\label{2.3.16}
+\textbf{(Example)} Let
+\begin{equation}
+X\sim N(2,25)
+\end{equation}
+Compute
+\begin{equation}
+P(1\leq X\leq 4)
+\end{equation}
+\end{theorem}
+\begin{proof}
+\begin{equation}
+\mu=2\text{ and }\sigma=5
+\end{equation}
+\end{proof}
+\section{Exercises}
+\begin{question}{}{}
+A ``dyadic rational number'' is a real number of the form $\frac{m}{2^k}$ where $k$ and $m$ are integers. Suppose we set $p = q = \frac{1}{2}$ in the construction for a probability measure on $\Omega_{\infty}$ and $X(\omega) = \sum_{i=1}^{\infty} \frac{Y_i(\omega)}{2^i}$ is a random variable on $\Omega_{\infty}$.
+
+\begin{itemize}
+  \item Show that, the induced measure $\mathcal{L}_X$ by the random variable $X$ on $\Omega$ satisfies that, for any positive integers $k$ and $m$ such that $0 \leq \frac{m-1}{2^k} < \frac{m}{2^k} \leq 1$, we have
+  \[
+  \mathcal{L}_X\left[\frac{m-1}{2^k}, \frac{m}{2^k}\right] = \frac{1}{2^k}.
+  \]
+  
+  In other words, the induced measure $\mathcal{L}_X$ on all intervals in $[0, 1]$ whose endpoints are dyadic rational numbers is the same as the Lebesgue measure of these intervals. The only possible way is that $\mathcal{L}_X$ is indeed the Lebesgue measure.
+  
+  \item Show that, in this case ($p = \frac{1}{2}$), the random variable $X(\omega) = \sum_{k=1}^{\infty} \frac{Y_k(\omega)}{2^k}$ is uniformly distributed on $[0, 1]$.
+\end{itemize}
+\end{question}
+\begin{proof}
+\textbf{(Part 1)}
+First notice
+\begin{align*}
+\mathcal{L}_X\left[\frac{m-1}{2^k},\frac{m}{2^k} \right]&=P\left(X\in \left[\frac{m-1}{2^k},\frac{m}{2^k} \right] \right)\\
+&=P\left(\left(2^k \right) X \in \left[m-1,m \right] \right)
+\end{align*}
+Then we express $X$ in the form
+ \begin{equation*}
+X\left(\omega \right)=\sum_{i=1}^\infty \frac{Y_i\left(\omega \right)}{2^i}=\sum_{i=1}^k \frac{Y_i\left(\omega \right)}{2^i}+\sum_{i=k+1}^\infty \frac{Y_i\left(\omega \right)}{2^i}
+\end{equation*}
+Notice that because $Y_i\left(\omega \right)\in \set{0,1}$, we can compute 
+\begin{equation*}
+\sum_{i=k+1}^\infty \frac{Y_i\left(\omega \right)}{2^i}\in \left[0,\frac{1}{2^k} \right]
+\end{equation*}
+Then 
+\begin{align*}
+  2^k X\left(\omega \right)=\sum_{i=1}^k \left(2^{k-i} \right)Y_i\left(\omega \right)+ 2^k\sum_{i=k+1}^\infty \frac{Y_i\left(\omega \right)}{2^i}\text{ where }&2^k\sum_{i=k+1}^\infty \frac{Y_i\left(\omega \right)}{2^i}\in \left[0,1 \right]\\
+  \text{ and }&\sum_{i=1}^k \left(2^{k-i}Y_i\left(\omega \right) \right)\inz
+\end{align*}
+Notice that we have 
+\begin{equation*}
+P\left( \sum_{i=k+1}^{\infty} \frac{Y_i\left(\omega \right)}{2^i}=0 \right)=0
+\end{equation*}
+Because of such, we can deduce
+\begin{align*}
+P\left(\left(2^k \right)X\in \left[m-1,m \right] \right)&=P\left( \sum_{i=1}^k \left(2^{k-i} \right)Y_i\left(\omega \right)+ 2^k\sum_{i=k+1}^\infty \frac{Y_i\left(\omega \right)}{2^i} \in \left[m-1,m \right]\right)\\
+&=P\left( \sum_{i=1}^k \left(2^{k-i} \right)Y_i\left(\omega \right) =m-1\right)
+\end{align*}
+Let $N=m-1$. Express $N$ by binary
+ \begin{equation*}
+N=\sum_{j=0}^n a_j 2^j\text{ where $a_j\in \set{0,1}$ and $a_n=1$}
+\end{equation*}
+That is 
+\begin{equation*}
+N=a_n2^n+a_{n-1}2^{n-1}+\cdots +a_{1}2^1+a_{0}2^0
+\end{equation*}
+The premise of the problem include $\frac{m}{2^k}\leq 1$, so we have $n<k$. Then we can express  $N$ by
+\begin{equation*}
+N=a_{k-1}2^{k-1}+a_{k-2}2^{k-2}+\cdots + a_{0}2^0
+\end{equation*}
+Then we see 
+\begin{align*}
+P\left( \sum_{i=1}^k \left(2^{k-i} \right)Y_i\left(\omega \right) =m-1\right)&=P\left(  \sum_{i=1}^k \left(2^{k-i} \right)Y_i\left(\omega \right)=N \right)\\
+&=P\left(\forall i:1\leq i\leq k, Y_i\left(\omega \right)=a_{k-i} \right)\\
+&=\prod_{i=1}^k P\left(Y_i\left(\omega \right)=a_{k-i} \right)\\
+&=\prod_{i=1}^k \frac{1}{2}=\frac{1}{2^k}
+\end{align*}
+\textbf{(Part 2)} Arbitrarily select an closed interval  $\left[a,b \right]$ contained by $\left[0,1 \right]$, we only wish to prove 
+\begin{equation*}
+\mathcal{L}_X \left[a,b \right]=b-a
+\end{equation*}
+Express $a,b$ by 
+ \begin{equation*}
+a=\sum_{n=1}^\infty \frac{a_n}{2^n}\text{ and }b=\sum_{n=1}^\infty \frac{b_n}{2^n}
+\end{equation*}
+Define
+\begin{equation*}
+A_k=\sum_{n=1}^k \frac{a_n}{2^n}\text{ and }B_k=\sum_{n=1}^k \frac{b_n}{2^n}\text{ where }\set{a_n:n\inn}\cup \set{b_n:n\inn}\subseteq \set{0,1}
+\end{equation*}
+We have 
+\begin{equation*}
+\lim_{k\to\infty} A_k=a\text{ and }\lim_{k\to\infty}B_k=b
+\end{equation*}
+Express $A_k,B_k$ by 
+\begin{equation*}
+  A_k=\frac{\sum_{n=1}^k \left( 2^{k-n}\right)a_n}{2^k}\text{ and }B_k=\frac{\sum_{n=1}^k \left( 2^{k-n}\right)b_n}{2^k}
+\end{equation*}
+Define $A'_k:=\sum_{n=1}^k \left(2^{k-n} \right)a_n$ and $B'_k=\sum_{n=1}^k \left(2^{k-n} \right)b_n$. It is easy to check $A'_k,B'_k \in \Z \cap \left[0,2^k \right]$. Then by the result in part 1, we have
+\begin{align*}
+\forall k,P\left(X\in \left[A_k,B_k \right] \right)&=P\left(X \in \left[\frac{A'_k}{2^k},\frac{B'_k}{2^k} \right] \right)\\
+&=B_k-A_k
+\end{align*}
+Then we see 
+\begin{align*}
+\mathcal{L}_X \left[a,b \right]&=P\left(X\in \left[a,b \right]\right)\\
+&=\lim_{k\to\infty} P\left(X\in \left[A_k,B_k \right] \right)\\
+&=\lim_{k\to\infty} B_k-A_k\\
+&=b-a
+\end{align*}
 
 
+
+
+\end{proof}
+\section{Central Limit Theorem}
+\begin{theorem}
+\label{2.5.1}
+\textbf{(Central Limit Theorem)} Let $X$ be an absolutely continuous random variable with expectation value  $\mu$ and variance $\sigma^2$. Define 
+\begin{equation*}
+Z_n:=\frac{X_1+\cdots +X_n-\mu n}{\sigma \sqrt{n} }
+\end{equation*}
+We have 
+\begin{equation*}
+\forall x, \lim_{n\to\infty} f_{Z_n}\left(x \right)=f_X\left(x \right)
+\end{equation*}
+\end{theorem}
+\begin{corollary}
+\label{2.5.2}
+\textbf{(De Moivre-Laplace Central Limit Theorem)} Fix $p$. Suppose $S_n\sim \text{Bin}\left(n,p \right)$. Define $\mu_n:=E\left[S_n \right]=np$ and $\sigma_n:=\sqrt{\var \left[S_n \right]}=\sqrt{np\left(1-p \right)}  $. Define $Z_n:=\frac{S_n-\mu_n}{\sigma_n}$. We have 
+\begin{equation*}
+\forall k\inn,\lim_{n\to\infty} \frac{f_{S_n}\left(k \right)}{f_{Z_n}\left(k \right)}=1
+\end{equation*}
+In other words 
+\begin{equation*}
+\binom{n}{k}p^kq^{n-k}\approx \frac{1}{ \sqrt{2\pi npq} }e^{\frac{-\left(k-np \right)^2}{2npq \right)}}
+\end{equation*}
+
+\end{corollary}
+\begin{corollary}
+\label{2.5.3}
+\textbf{(De Moivre-Laplace Central Limit Theorem)} 
+Recall
+\begin{equation*}
+\Phi \left(x \right)=\int_{-\infty}^x \frac{1}{\sqrt{2\pi} }e^{\frac{-t^2}{2}}dt
+\end{equation*}
+Let
+\begin{equation}
+S_n\sim \text{Bin}(n,p)
+\end{equation}
+Fix $p$, we have
+\begin{equation}
+\forall x\inr,\lim_{n\to\infty} P(\frac{S_n-\mu_n}{\sigma_n}\leq x)=\Phi(x)
+\end{equation}
+where 
+\begin{equation*}
+\mu_n=E\left[S_n \right]=np\text{ and }\sigma_n=\sqrt{\var \left[S_n \right]}=\sqrt{np\left(1-p \right)}  
+\end{equation*}
+Then very weakly, we have
+\begin{equation*}
+  \lim_{n\to\infty}\frac{S_n-\mu_n}{\sigma_n} \sim N\left(0,1 \right)
+\end{equation*}
+\end{corollary}
+\begin{corollary}
+\label{2.5.4}
+\textbf{(Approximation of Large Binomial R.V.)} Let $S_n\sim \text{Bin}\left(n,p \right)$. If $n$ is large enough, we can approximate
+ \begin{align*}
+P\left(m_1\leq S_n\leq m_2 \right)&=P\left(\frac{m_1-np}{\sqrt{npq} }\leq \frac{S_n-np}{\sqrt{npq} }\leq \frac{m_2-np}{\sqrt{npq} } \right)\\
+&\approx \Phi\left(\frac{m_2-np}{\sqrt{npq} } \right)-\Phi\left( \frac{m_1-np}{\sqrt{npq} } \right)\\
+&=\int_{\frac{m_1-np}{\sqrt{npq} }}^{\frac{m_2-np}{\sqrt{npq} } }  \frac{1}{\sqrt{2\pi} }e^{\frac{-x^2}{2}}dx
+\end{align*}
+And 
+\begin{equation*}
+P\left(S_n=m \right)\approx\frac{1}{\sqrt{2\pi npq} }e^{\frac{-\left(m-np \right)^2}{2npq}}
+\end{equation*}
+\end{corollary}
+\begin{question}{}{}
+A die is threw $12000$ times. What is the probability that there will be exactly $1800$ rolls of $6$? What is the probability that the number of $6$'s lies in the interval  $\left[1950,2100 \right]$
+\end{question}
+\begin{proof}
+We have $n=12000$ and  $p=\frac{1}{6}$. Let $S_n\sim\text{Bin}\left(n,p \right)$. We have 
+\begin{equation*}
+P\left(S_n=1800 \right)\approx \frac{1}{\sqrt{2\pi \times 12000\times \frac{5}{36}}}e^{\frac{-\left(1800-2000 \right)^2}{2\times 12000\times \frac{5}{36}}}\sim 6.004\times 10^{-8}
+\end{equation*}
+Notice that the direct computation of $P\left(S_n=1800 \right)$ is $\binom{12000}{1800}\left(\frac{1}{6} \right)^{1800}\left(\frac{5}{6} \right)^{10200}$, in which the computation of $\binom{12000}{1800}$ is difficult even for computer.\\
+
+Again, notice that the Poisson approximation $V\sim \text{Poisson}\left(2000 \right)$ of $P\left(V=1800 \right)$ is $\frac{e^{-2000}2000^{1800}}{1800!}$, in which the computation of $1800!$ is difficult even for computer.\\
+
+Let $\sigma=\sqrt{npq} $ and $\mu=np$. We have 
+\begin{align*}
+  P\left(1950\leq S_n\leq 2100 \right)&\approx \int^{\frac{2100-\mu}{\sigma}}_{\frac{1950-\mu}{\sigma}} \frac{1}{\sqrt{2\pi} }e^{\frac{-x^2}{2}}dx\\
+&=\Phi\left(\frac{2100-\mu}{\sigma} \right)-\Phi\left(\frac{1950-\mu}{\sigma} \right)\\
+&\approx 0.8825
+\end{align*}
+\end{proof}
+\chapter{Joint Distribution}
+\section{Independence}
+\begin{definition}
+\label{3.0.1}
+\textbf{(Definition of Conditional Probability)} Let $A,B$ be two events in  $\mathcal{F}$. We define
+\begin{equation*}
+P\left(A|B \right):=\frac{P\left(A\cap B \right)}{P\left(B \right)}
+\end{equation*}
+We say $A,B$ are independent if 
+ \begin{equation*}
+P\left(A\cap B \right)=P\left(A \right)P\left(B \right)
+\end{equation*}
+\end{definition}
+\begin{theorem}
+\label{3.0.2}
+\textbf{(Independence) 
+\begin{equation*}
+A,B\text{ are independent }\iff P\left( A|B\right)=P\left(A \right)
+\end{equation*}
+\end{theorem}
 \end{document}
